tests/type_mismatch_var_init_ident_bad.stderr
tests/type_mismatch_var_init_ident_bad.hop:4:14: error: HOP2004: type mismatch: cannot use 'a' of type i32 as i64
